# dayer

./: .gitmodules  Cargo.toml  README.md  build.sh  commonise.sh  script.sh
src/: main.rs  util.rs
